develop ::: se realizan maquetados iniciales para la visualizacion de mazos con sus cartas. Se actualiza swagger y se generan nuevos endpoints
